--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -19,12 +19,10 @@
   <!-- Прелоадер -->
 
   <div class="flex flex-col items-center justify-center fixed z-10 inset-0 bg-black duration-5" data-preloader>
-    <a class="btn btn-primary w-[166px]" data-waved="light" href="/">
-      <picture>
-        <source srcset="img/pictures/logo.webp" type="image/webp">
-        <img class="w-full" src="img/pictures/logo.png" alt="">
-      </picture>
-    </a>
+    <picture>
+      <source srcset="img/pictures/logo.webp" type="image/webp">
+      <img class="block w-[166px]" src="img/pictures/logo.png" alt="">
+    </picture>
   </div>
 
   <!-- Шапка документа -->
