--- a/src/scss/ui-kit/_fonts.scss
+++ b/src/scss/ui-kit/_fonts.scss
@@ -5,8 +5,7 @@
   src        : url("../fonts/DrukCyr/druktextwidecyr-medium.eot?#iefix") format("embedded-opentype"),
     url("../fonts/DrukCyr/druktextwidecyr-medium.woff2") format("woff2"),
     url("../fonts/DrukCyr/druktextwidecyr-medium.woff") format("woff"),
-    url("../fonts/DrukCyr/druktextwidecyr-medium.ttf") format("truetype"),
-    url("../fonts/DrukCyr/druktextwidecyr-medium.svg#druktextwidecyr-medium") format("svg");
+    url("../fonts/DrukCyr/druktextwidecyr-medium.ttf") format("truetype");
 }
 
 // Montserrat
