--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -19,10 +19,10 @@
   <!-- Прелоадер -->
 
   <div class="flex flex-col items-center justify-center fixed z-10 inset-0 bg-black duration-5" data-preloader>
-    <picture>
-      <source srcset="img/pictures/logo.webp" type="image/webp">
-      <img class="block w-[166px]" src="img/pictures/logo.png" alt="">
-    </picture>
+    <div class="preloader mb-10">
+      <div class="preloader-circle"></div>
+    </div>
+    <p class="font-alt font-medium uppercase text-center text-18 sm:text-22">Идет загрузка...</p>
   </div>
 
   <!-- Шапка документа -->
